옵션 메뉴에 설정 메뉴 추가 및 오버레이 설정 제어 추가됨

--- a/app/src/main/res/values-en/program_info.xml
+++ b/app/src/main/res/values-en/program_info.xml
@@ -30,6 +30,7 @@ Version:  Release Version 1.6\n
 1. Main screen is screen ratio processing by Android device.\n
 2. New announcement in main screen notice list added new display for 7 days
 3. 18:9 response. Additional support for 18.5:9 by adding additional support
+4. Layout setting function
 \n\n
 Version:  Release Version 1.5\n
 1. Add voice recognition search capability to search for employees\n
