--- a/app/src/main/res/values/program_info.xml
+++ b/app/src/main/res/values/program_info.xml
@@ -30,6 +30,8 @@
 1. 메인 화면에 안드로이드 기기별 화면 비율 처리\n
 2. 메인 화면 공지 리스트에 신규 공지는 7일간 New 표시 추가됨
 3. 갤럭시S8 18:9 화면 및 G6 발표에 따라 대응, 추가로 18.5:9까지 지원 고려 대응 처리
+4. 레이아웃 설정 기능 추가됨
+5. 회의실 오류 수정
 \n\n
 버전:  Release Version 1.5\n
 1. 직원검색에 음성 인식 검색 기능 추가\n
