--- a/app/src/main/res/menu/main.xml
+++ b/app/src/main/res/menu/main.xml
@@ -6,7 +6,13 @@
         android:orderInCategory="100"
         android:title="@string/program_info" />
     <item
+        android:id="@+id/settings"
+        android:orderInCategory="100"
+        android:title="@string/settings" />
+
+    <item
         android:id="@+id/action_exit"
         android:orderInCategory="100"
         android:title="@string/action_exit" />
+
 </menu>
