--- a/app/src/main/res/values-ja/program_info.xml
+++ b/app/src/main/res/values-ja/program_info.xml
@@ -31,6 +31,7 @@
 1. メイン画面にAndroidの機器別のアスペクト比を処理。\n
 2. メイン画面の告知リストに新規の告知は7日間New表示追加されたこと\n
 3. ギャラクシーS818：9の画面とG6発表に基づいて対応、さらに18.5：9までサポート考慮対応処理
+4. レイアウト設定機能
         \n\n
 バージョン:  Release Version 1.5\n
 1. スタッフ検索に音声認識検索機能追加された。\n
