--- a/app/src/main/res/values/program_info.xml
+++ b/app/src/main/res/values/program_info.xml
@@ -2,7 +2,7 @@
 <resources>
     <string name="prog_info">
         서비스명:EluoC&#38;C Intranet\n\n
-        버전: Release Version 1.6\n\n
+        버전: Release Version 1.6.1\n\n
         기능:\n
         - 메인 화면에서 공지사항 확인5개 리스트 방식 출력\n
         - 메인 화면에서 공지 리스트에 신규 공지는 7일간 New 표시 함\n
@@ -10,7 +10,7 @@
         - 메인 화면에서 외근정보 출력 리스트 방식 출력\n
         - 네비게이트에 디바이스 사용자 정보 사진/이름/부서 출력\n
         - 회사 공지 리스트 20개 내용 상세 확인 기능 제공\n
-        - 회사 직원 정보 검색 결과에서 대화상자로 상세 정보 표기\n전화연결/문자 보내기 기능 제공\n
+        - 회사 직원 정보 검색 결과에서 대화상자로 상세 정보 표기\n전화 연결/문자 보내기 기능 제공\n
         - 회사 직원 검색 메뉴에서 직원검색시 전화번호/이름/ID로 검색 기능 제공\n
         - 회사 직원 검색 결과 리스트에서 대상자 3초 이상 길게 터치시 전화바로걸기\n
         - 회사 직원 검색 음성 인식 검색 지원\n
@@ -26,7 +26,12 @@
         \n
         \n
         히스토리\n
-        버전:  Release Version 1.6\n
+버전:  Release Version 1.6.1\n
+1. 메인 외근현황 없음 표기 수정\n
+2. 메인 New 오류 수정\n
+3. 멀티윈도우 관련 문구 추가\n\n
+
+버전:  Release Version 1.6\n
 1. 메인 화면에 안드로이드 기기별 화면 비율 처리\n
 2. 메인 화면 공지 리스트에 신규 공지는 7일간 New 표시 추가됨
 3. 갤럭시S8 18:9 화면 및 G6 발표에 따라 대응, 추가로 18.5:9까지 지원 고려 대응 처리
