--- a/app/src/main/res/layout/activity_main_view.xml
+++ b/app/src/main/res/layout/activity_main_view.xml
@@ -21,8 +21,9 @@
 
 
         <!--공지 타이틀-->
+
         <LinearLayout
-            android:layout_width="172dp"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="4dp"
             android:orientation="horizontal"
@@ -30,25 +31,50 @@
 
             <TextView
                 android:id="@+id/titleNotice"
-                android:layout_width="161dp"
+                android:layout_width="77dp"
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="10dp"
                 android:layout_marginRight="10dp"
                 android:layout_marginTop="2dp"
+                android:layout_weight="0.75"
                 android:paddingBottom="5dip"
                 android:paddingTop="5dip"
                 android:text="@string/main_notice"
                 android:textSize="8pt" />
 
+            <LinearLayout
+                android:layout_width="222dp"
+                android:layout_height="match_parent"
+                android:gravity="right"
+                android:orientation="vertical"
+                android:layout_weight="0.08">
+
+                <TextView
+                    android:id="@+id/view_more"
+                    android:layout_width="89dp"
+                    android:layout_height="wrap_content"
+                    android:layout_marginLeft="0dp"
+                    android:layout_marginRight="0dp"
+                    android:layout_marginTop="2dp"
+                    android:gravity="right"
+                    android:paddingBottom="5dip"
+                    android:paddingTop="5dip"
+                    android:text="@string/view_more"
+                    android:textSize="6pt" />
+            </LinearLayout>
+
+
         </LinearLayout>
 
         <!--공지 리스트-->
+
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="0dp"
-            android:orientation="horizontal"
             android:layout_weight="4"
-            android:weightSum="1">
+            android:orientation="horizontal"
+            android:weightSum="1"
+            tools:ignore="NestedWeights">
 
             <ListView
                 android:id="@+id/listNotice"
@@ -88,8 +114,8 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="0dp"
-            android:orientation="horizontal"
             android:layout_weight="2"
+            android:orientation="horizontal"
             android:weightSum="1">
 
             <TextView
@@ -132,12 +158,12 @@
 
         <!--외근자 리스트-->
         <LinearLayout
-            android:baselineAligned="false"
             android:layout_width="match_parent"
             android:layout_height="0dp"
-            android:orientation="horizontal"
             android:layout_marginBottom="10dp"
             android:layout_weight="4"
+            android:baselineAligned="false"
+            android:orientation="horizontal"
             android:weightSum="1">
 
             <ListView
