--- a/app/src/main/res/values-ja/program_info.xml
+++ b/app/src/main/res/values-ja/program_info.xml
@@ -2,7 +2,7 @@
 <resources>
     <string name="prog_info">
         サービス名:EluoC&#38;C Intranet\n\n
-        バージョン: Release Version 1.6.1\n\n
+        バージョン: Release Version 1.6.3\n\n
         機能:\n
         - メイン画面でお知らせ確認5つのリスト方式。\n
         - メイン画面での休暇者見せる。\n
@@ -26,39 +26,49 @@
         \n
         \n
         ヒストリー\n
-バージョン：Release Version1.6.1\n
-1.メイン画面に外勤ステータスなし表記を修正\n
-2.メイン画面のお知らせリストでNew表示エラーを修正\n
-3.マルチウィンドウ関連フレーズを追加
-\n\n
-バージョン:  Release Version 1.6\n
-1. メイン画面にAndroidの機器別のアスペクト比を処理。\n
-2. メイン画面の告知リストに新規の告知は7日間New表示追加されたこと\n
-3. ギャラクシーS818：9の画面とG6発表に基づいて対応、さらに18.5：9までサポート考慮対応処理
-4. レイアウト設定機能
-\n\n
-バージョン:  Release Version 1.5\n
-1. スタッフ検索に音声認識検索機能追加された。\n
-2. メイン画面のお知らせ/外勤情報表示の種類に応じて色を変更された。\n
-3. 画面移動にアニメーション効果追加。\n
-4. 画面イントロ画像交換
-\n\n
-バージョン:  Release Version 1.4\n
-1. 会議室予約関連プッシュ受信機能追加された。
-\n\n
-バージョン:  Release Version 1.3\n
-1. プッシュトークン収集機能を追加\n
-2. 従業員情報の結果なし処理エラーを修正\n\n
 
-バージョン:  Release Version 1.2\n
-1. プッシュ機能追加\n
-2. アンドロイド7.0関連機能対応処理\n\n
+        バージョン:  Release Version 1.6.3\n
+        1. マルチメディアのエラーの修正\n
+        \n\n
 
-バージョン:  Release Version 1.1\n
-1. スタッフ照会結果のない場合は、タッチイベントのエラーを修正\n\n
+        バージョン：Release Version1.6.2\n
+        1.バグ追跡機能追加された。
+        2. メイン画面の上部にお知らせその他の機能を追加。
+        \n\n
 
-バージョン:  Release Version 1.0\n
-1. 電話着信時のオーバー層ポップアップ出力電話終了時消える処理\n\n
+        バージョン：Release Version1.6.1\n
+        1.メイン画面に外勤ステータスなし表記を修正\n
+        2.メイン画面のお知らせリストでNew表示エラーを修正\n
+        3.マルチウィンドウ関連フレーズを追加
+        \n\n
+        バージョン:  Release Version 1.6\n
+        1. メイン画面にAndroidの機器別のアスペクト比を処理。\n
+        2. メイン画面の告知リストに新規の告知は7日間New表示追加されたこと\n
+        3. ギャラクシーS818：9の画面とG6発表に基づいて対応、さらに18.5：9までサポート考慮対応処理
+        4. レイアウト設定機能
+        \n\n
+        バージョン:  Release Version 1.5\n
+        1. スタッフ検索に音声認識検索機能追加された。\n
+        2. メイン画面のお知らせ/外勤情報表示の種類に応じて色を変更された。\n
+        3. 画面移動にアニメーション効果追加。\n
+        4. 画面イントロ画像交換
+        \n\n
+        バージョン:  Release Version 1.4\n
+        1. 会議室予約関連プッシュ受信機能追加された。
+        \n\n
+        バージョン:  Release Version 1.3\n
+        1. プッシュトークン収集機能を追加\n
+        2. 従業員情報の結果なし処理エラーを修正\n\n
+
+        バージョン:  Release Version 1.2\n
+        1. プッシュ機能追加\n
+        2. アンドロイド7.0関連機能対応処理\n\n
+
+        バージョン:  Release Version 1.1\n
+        1. スタッフ照会結果のない場合は、タッチイベントのエラーを修正\n\n
+
+        バージョン:  Release Version 1.0\n
+        1. 電話着信時のオーバー層ポップアップ出力電話終了時消える処理\n\n
 
 
 
