--- a/app/src/main/res/values/program_info.xml
+++ b/app/src/main/res/values/program_info.xml
@@ -2,7 +2,7 @@
 <resources>
     <string name="prog_info">
         서비스명:EluoC&#38;C Intranet\n\n
-        버전: Release Version 1.6.1\n\n
+        버전: Release Version 1.6.3\n\n
         기능:\n
         - 메인 화면에서 공지사항 확인5개 리스트 방식 출력\n
         - 메인 화면에서 공지 리스트에 신규 공지는 7일간 New 표시 함\n
@@ -23,43 +23,60 @@
         - 해당 앱은 ELUOC&#38;C 직원이 아닌 경우 설치 사용시 정상 작동하지 않습니다.\n
         - 해당 앱은 ELUOC&#38;C Intranet 앱으로 그외 목적(2차 가공)으로 사용을 하지 않습니다.\n
         - 해당 앱은 ELUOC&#38;C  내부 스터티 과정에서 개발된 application 을 알려드립니다.\n
-        \n
-        \n
+        \n\n
+
         히스토리\n
-버전:  Release Version 1.6.1\n
-1. 메인 외근현황 없음 표기 수정\n
-2. 메인 New 오류 수정\n
-3. 멀티윈도우 관련 문구 추가\n\n
 
-버전:  Release Version 1.6\n
-1. 메인 화면에 안드로이드 기기별 화면 비율 처리\n
-2. 메인 화면 공지 리스트에 신규 공지는 7일간 New 표시 추가됨
-3. 갤럭시S8 18:9 화면 및 G6 발표에 따라 대응, 추가로 18.5:9까지 지원 고려 대응 처리
-4. 레이아웃 설정 기능 추가됨
-5. 회의실 오류 수정
-\n\n
-버전:  Release Version 1.5\n
-1. 직원검색에 음성 인식 검색 기능 추가\n
-2. 메인 화면 공지/외근 정보 표시 종류에 따라 색상 변경\n
-3. 화면 이동에 애니메이션 효과 추가됨\n
-4. 화면 인트로 이미지 교체
-\n\n
-버전:  Release Version 1.4\n
-1. 회의실 예약 관련 푸시 수신 기능 추가됨
-\n\n
-버전:  Release Version 1.3\n
-1. 푸시 토큰 수집 기능 추가\n
-2. 직원 정보 결과 없음 처리 오류 수정\n\n
+         버전:  Release Version 1.6.3\n
+        1. 멀티 윈도우 오류 수정\n
+        \n\n
 
-버전:  Release Version 1.2\n
-1. 푸시기능 추가됨\n
-2. 안드로이드7.0 관련 기능 대응 처리\n\n
+        버전:  Release Version 1.6.2\n
+        1. 오류 추적 기능 추가\n
+        2. 메인 화면 상단 공지사항 더 보기 기능 추가
+        \n\n
 
-버전:  Release Version 1.1\n
-1. 직원 조회결과 없는 경우 터치 이벤트 오류 수정\n\n
+        버전:  Release Version 1.6.1\n
+        1. 메인 외근현황 없음 표기 수정\n
+        2. 메인 New 오류 수정\n
+        3. 멀티윈도우 관련 문구 추가
+        \n\n
 
-버전:  Release Version 1.0\n
-1. 전화 수신시 오버레이어 팝업 출력 전화 종료시 사라짐 처리\n\n
+        버전:  Release Version 1.6\n
+        1. 메인 화면에 안드로이드 기기별 화면 비율 처리\n
+        2. 메인 화면 공지 리스트에 신규 공지는 7일간 New 표시 추가됨
+        3. 갤럭시S8 18:9 화면 및 G6 발표에 따라 대응, 추가로 18.5:9까지 지원 고려 대응 처리
+        4. 레이아웃 설정 기능 추가됨
+        5. 회의실 오류 수정
+        \n\n
+
+        버전:  Release Version 1.5\n
+        1. 직원검색에 음성 인식 검색 기능 추가\n
+        2. 메인 화면 공지/외근 정보 표시 종류에 따라 색상 변경\n
+        3. 화면 이동에 애니메이션 효과 추가됨\n
+        4. 화면 인트로 이미지 교체
+        \n\n
+
+        버전:  Release Version 1.4\n
+        1. 회의실 예약 관련 푸시 수신 기능 추가됨
+        \n\n
+
+        버전:  Release Version 1.3\n
+        1. 푸시 토큰 수집 기능 추가\n
+        2. 직원 정보 결과 없음 처리 오류 수정\n\n
+
+        버전:  Release Version 1.2\n
+        1. 푸시기능 추가됨\n
+        2. 안드로이드7.0 관련 기능 대응 처리
+        \n\n
+
+        버전:  Release Version 1.1\n
+        1. 직원 조회결과 없는 경우 터치 이벤트 오류 수정
+        \n\n
+
+        버전:  Release Version 1.0\n
+        1. 전화 수신시 오버레이어 팝업 출력 전화 종료시 사라짐 처리
+        \n\n
 
 
 
