--- a/app/src/main/res/layout/activity_meeting_list.xml
+++ b/app/src/main/res/layout/activity_meeting_list.xml
@@ -6,6 +6,18 @@
     android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
+
+    <android.support.design.widget.BottomNavigationView
+        android:id="@+id/navigation"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_gravity="bottom"
+        android:layout_marginTop="57dp"
+        android:background="?android:attr/windowBackground"
+        app:menu="@menu/navigation" >
+
+    </android.support.design.widget.BottomNavigationView>
+
     <ListView
         android:paddingLeft="10dp"
         android:paddingRight="10dp"
@@ -14,9 +26,12 @@
         android:layout_width="match_parent"
         android:layout_below="@+id/et_message"
         android:layout_alignParentStart="true"
-        android:layout_marginTop="64dp"
+        android:layout_marginTop="114dp"
         android:layout_height="1024dp"
-        />
+        tools:ignore="UnknownIdInLayout" />
+
+
+
 
     <!--<ListView-->
         <!--android:paddingLeft="10dp"-->
@@ -44,3 +59,4 @@
         <!--android:layout_alignParentRight="true"-->
         <!--android:layout_alignParentBottom="true" />-->
     </RelativeLayout>
+
