--- a/app/src/main/res/values/program_info.xml
+++ b/app/src/main/res/values/program_info.xml
@@ -2,7 +2,7 @@
 <resources>
     <string name="prog_info">
         서비스명:EluoC&#38;C Intranet\n\n
-        버전: Release Version 1.6.3\n\n
+        버전: Release Version 1.7.0\n\n
         기능:\n
         - 메인 화면에서 공지사항 확인5개 리스트 방식 출력\n
         - 메인 화면에서 공지 리스트에 신규 공지는 7일간 New 표시 함\n
@@ -15,9 +15,10 @@
         - 회사 직원 검색 결과 리스트에서 대상자 3초 이상 길게 터치시 전화바로걸기\n
         - 회사 직원 검색 음성 인식 검색 지원\n
         - 내 휴가 이력 확인 기능 제공 \n
-        - 회의실 예약 된 내용을 확인 가능 기능 제공\n
+        - 각 층별 회의실 예약 된 내용을 확인 가능 기능 제공\n
         - 전화 수신시 직원 정보 확인 수신창에 내용 출력\n
         - 회의실 예약 시간에 따라 푸시 수신 기능 제공
+        - 영문/일문 지원(네이티브 부분에 한정됨 데이터는 한글 표기됨)
         \n\n
         주위:\n
         - 해당 앱은 ELUOC&#38;C 직원이 아닌 경우 설치 사용시 정상 작동하지 않습니다.\n
@@ -27,8 +28,14 @@
 
         히스토리\n
 
-         버전:  Release Version 1.6.3\n
-        1. 멀티 윈도우 오류 수정\n
+        버전:  Release Version 1.7.0\n
+        1. 회의실예약 현황 UI 변경(7층, 8층, 4층 회의실 확인 가능)\n
+        2. 회의실예약 시간이 경과 한 경우 표기 문구 수정\n
+        3. 직원정보 조회시 사진, 부서 추가 표시 및 폰트 색상 추가
+        \n\n
+
+        버전:  Release Version 1.6.3\n
+        1. 멀티 윈도우 오류 수정
         \n\n
 
         버전:  Release Version 1.6.2\n
