--- a/app/src/main/res/values-ja/program_info.xml
+++ b/app/src/main/res/values-ja/program_info.xml
@@ -27,6 +27,15 @@
         \n
         ヒストリー\n
 
+        バージョン:  Release Version 1.7.1\n
+        1. スタッフ照会時2文字以上入力した後再生変更\n
+        2. スタッフ照会時プログレスダイアログ表記追加\n
+        3. スタッフ照会時検索が完了する時にトーストメッセージで完了通知他の\n
+        4. 会議室の予約状況会議室]タブの位置を変更\n
+        5. オフィス拡張に伴う会議室を追加\n
+        6. スタッフ照会結果通貨タッチ時すぐ電話接続に変更
+        \n\n
+
         バージョン:  Release Version 1.7.0\n
         1. 会議室の予約状況UIの変更（7階、8階、4階の会議室確認可能）\n
         2. 従業員情報照会時写真、ブービー追加表示およびフォントを追加\n
