--- a/app/src/main/res/values/program_info.xml
+++ b/app/src/main/res/values/program_info.xml
@@ -2,7 +2,7 @@
 <resources>
     <string name="prog_info">
         서비스명:EluoC&#38;C Intranet\n\n
-        버전: Release Version 1.7.0\n\n
+        버전: Release Version 1.7.1\n\n
         기능:\n
         - 메인 화면에서 공지사항 확인5개 리스트 방식 출력\n
         - 메인 화면에서 공지 리스트에 신규 공지는 7일간 New 표시 함\n
@@ -27,6 +27,15 @@
         \n\n
 
         히스토리\n
+
+        버전:  Release Version 1.7.1\n
+        1. 직원 조회시 2자 이상 입력 후 조회 변경\n
+        2. 직원 조회시 프로그레스 다이얼로그 표기 추가\n
+        3. 직원 조회시 검색이 완료시 토스트 메시지로 완료 알림 추가\n
+        4. 회의실 예약현황 회의실 탭 위치 변경\n
+        5. 사무실 확장에 따른 회의실 추가\n
+        6. 직원 조회결과 통화 터치시 바로 전화 연결로 변경
+        \n\n
 
         버전:  Release Version 1.7.0\n
         1. 회의실예약 현황 UI 변경(7층, 8층, 4층 회의실 확인 가능)\n
