히스토리 갱신

--- a/app/src/main/res/values-en/program_info.xml
+++ b/app/src/main/res/values-en/program_info.xml
@@ -33,7 +33,8 @@
         3. Add completion notification to toast message when search is complete\n
         4. Conference Room Reservation Board Room Tab Location Change\n
         5. Adding a meeting room as an office expands\n
-        6. Employee Lookup Result Calls Change to Direct Dialing on Touch
+        6. Employee Lookup Result Calls Change to Direct Dialing on Touch\n
+        7. URL moveable when WEB link touch is added to the notice details
         \n\n
 
 
