--- a/app/src/main/res/values/program_info.xml
+++ b/app/src/main/res/values/program_info.xml
@@ -34,7 +34,8 @@
         3. 직원 조회시 검색이 완료시 토스트 메시지로 완료 알림 추가\n
         4. 회의실 예약현황 회의실 탭 위치 변경\n
         5. 사무실 확장에 따른 회의실 추가\n
-        6. 직원 조회결과 통화 터치시 바로 전화 연결로 변경
+        6. 직원 조회결과 통화 터치시 바로 전화 연결로 변경\n
+        7. 공지 상세 내용에 WEB 링크 터치시 URL 이동 가능 추가됨
         \n\n
 
         버전:  Release Version 1.7.0\n
