공지상세에 WEB URL 존재하면 웹 브라우져로 이동

--- a/app/src/main/res/layout/activity_notice_view.xml
+++ b/app/src/main/res/layout/activity_notice_view.xml
@@ -71,6 +71,7 @@
             android:scrollbars="vertical"
             android:textColor="@color/content_color"
             android:textIsSelectable="true"
-            android:textSize="8pt" />
+            android:textSize="8pt"
+            android:autoLink="web|email"/>
     </TableLayout>
 </LinearLayout>
