추가 다국어

--- a/app/src/main/res/values-en/program_info.xml
+++ b/app/src/main/res/values-en/program_info.xml
@@ -34,7 +34,8 @@
         4. Conference Room Reservation Board Room Tab Location Change\n
         5. Adding a meeting room as an office expands\n
         6. Employee Lookup Result Calls Change to Direct Dialing on Touch\n
-        7. URL moveable when WEB link touch is added to the notice details
+        7. URL moveable when WEB link touch is added to the notice details\n
+        8. Application version check function added (download page for lower version)
         \n\n
 
 
