--- a/app/src/main/res/values-ja/program_info.xml
+++ b/app/src/main/res/values-ja/program_info.xml
@@ -34,7 +34,8 @@
         4. 会議室の予約状況会議室]タブの位置を変更\n
         5. オフィス拡張に伴う会議室を追加\n
         6. スタッフ照会結果通貨タッチ時すぐ電話接続に変更\n
-        7. 公知詳細にWEBリンクタッチすると、URLに移動可能追加
+        7. 公知詳細にWEBリンクタッチすると、URLに移動可能追加\n
+        8. アプリケーションのバージョンチェック機能を追加（サブバージョンをダウンロードページに移動）
         \n\n
 
         バージョン:  Release Version 1.7.0\n
