--- a/app/src/main/res/values/program_info.xml
+++ b/app/src/main/res/values/program_info.xml
@@ -35,7 +35,8 @@
         4. 회의실 예약현황 회의실 탭 위치 변경\n
         5. 사무실 확장에 따른 회의실 추가\n
         6. 직원 조회결과 통화 터치시 바로 전화 연결로 변경\n
-        7. 공지 상세 내용에 WEB 링크 터치시 URL 이동 가능 추가됨
+        7. 공지 상세 내용에 WEB 링크 터치시 URL 이동 가능 추가됨\n
+        8. 앱 버전 체크 기능 추가 (하위 버전 경우 다운로드 페이지 이동)
         \n\n
 
         버전:  Release Version 1.7.0\n
