다국어 추가

--- a/app/src/main/res/values-ja/program_info.xml
+++ b/app/src/main/res/values-ja/program_info.xml
@@ -35,7 +35,9 @@
         5. オフィス拡張に伴う会議室を追加\n
         6. スタッフ照会結果通貨タッチ時すぐ電話接続に変更\n
         7. 公知詳細にWEBリンクタッチすると、URLに移動可能追加\n
-        8. アプリケーションのバージョンチェック機能を追加（サブバージョンをダウンロードページに移動）
+        8. アプリケーションのバージョンチェック機能を追加（サブバージョンをダウンロードページに移動）\n
+        9. MY ELUOメニュー休暇リストのバグ修正\n
+        10.その他の修正
         \n\n
 
         バージョン:  Release Version 1.7.0\n
