--- a/app/src/main/res/values-en/program_info.xml
+++ b/app/src/main/res/values-en/program_info.xml
@@ -35,7 +35,9 @@
         5. Adding a meeting room as an office expands\n
         6. Employee Lookup Result Calls Change to Direct Dialing on Touch\n
         7. URL moveable when WEB link touch is added to the notice details\n
-        8. Application version check function added (download page for lower version)
+        8. Application version check function added (download page for lower version)\n
+        9. Fixed MY ELUO menu vacation list bug\n
+        10. Other corrections
         \n\n
 
 
