--- a/app/src/main/res/values/program_info.xml
+++ b/app/src/main/res/values/program_info.xml
@@ -18,7 +18,6 @@
         - 각 층별 회의실 예약 된 내용을 확인 가능 기능 제공\n
         - 전화 수신시 직원 정보 확인 수신창에 내용 출력\n
         - 회의실 예약 시간에 따라 푸시 수신 기능 제공
-        - 영문/일문 지원(네이티브 부분에 한정됨 데이터는 한글 표기됨)
         \n\n
         주위:\n
         - 해당 앱은 ELUOC&#38;C 직원이 아닌 경우 설치 사용시 정상 작동하지 않습니다.\n
@@ -36,7 +35,9 @@
         5. 사무실 확장에 따른 회의실 추가\n
         6. 직원 조회결과 통화 터치시 바로 전화 연결로 변경\n
         7. 공지 상세 내용에 WEB 링크 터치시 URL 이동 가능 추가됨\n
-        8. 앱 버전 체크 기능 추가 (하위 버전 경우 다운로드 페이지 이동)
+        8. 앱 버전 체크 기능 추가 (하위 버전 경우 다운로드 페이지 이동)\n
+        9. MY ELUO메뉴 휴가 리스트 버그 수정\n
+        10. 기타 수정
         \n\n
 
         버전:  Release Version 1.7.0\n
