--- a/app/src/main/res/layout/activity_leave_view.xml
+++ b/app/src/main/res/layout/activity_leave_view.xml
@@ -1,12 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 
-<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
-    
+    android:layout_height="match_parent"
+    >
     <ListView
         android:paddingLeft="10dp"
         android:paddingRight="0dp"
@@ -17,17 +16,4 @@
         android:layout_alignParentStart="true"
         android:layout_marginTop="64dp"
         android:layout_height="1024dp" />
-
-    <!--<android.support.design.widget.FloatingActionButton-->
-        <!--android:id="@+id/leave_fab"-->
-        <!--android:layout_width="wrap_content"-->
-        <!--android:layout_height="wrap_content"-->
-        <!--android:layout_gravity="bottom|end"-->
-        <!--app:srcCompat="@android:drawable/ic_menu_edit"-->
-        <!--android:layout_marginLeft="@dimen/fab_margin"-->
-        <!--android:layout_marginBottom="60px"-->
-        <!--android:layout_marginRight="20px"-->
-        <!--android:layout_marginEnd="16dp"-->
-        <!--android:layout_alignParentRight="true"-->
-        <!--android:layout_alignParentBottom="true" />-->
-</android.support.design.widget.CoordinatorLayout>
+</RelativeLayout>
