--- a/app/src/main/res/layout/activity_meeting_list.xml
+++ b/app/src/main/res/layout/activity_meeting_list.xml
@@ -22,14 +22,13 @@
             tools:ignore="ObsoleteLayoutParam,UnknownIdInLayout"
             android:layout_below="@+id/navigation"
             android:layout_alignParentStart="true" />
-
     </LinearLayout>
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_marginTop="407dp"
-        android:orientation="horizontal">
+        android:layout_marginTop="457dp"
+        android:orientation="horizontal" >
 
         <android.support.design.widget.BottomNavigationView
             android:id="@+id/navigation"
@@ -38,12 +37,9 @@
             android:layout_gravity="bottom"
             android:layout_marginTop="57dp"
             android:background="?android:attr/windowBackground"
-            app:menu="@menu/navigation" >
-
-
+            app:menu="@menu/navigation"
+            >
         </android.support.design.widget.BottomNavigationView>
-
-
     </LinearLayout>
 
 
