--- a/app/src/main/res/menu/navigation.xml
+++ b/app/src/main/res/menu/navigation.xml
@@ -11,9 +11,9 @@
         android:icon="@drawable/ic_meeting_24dp"
         android:title="@string/info_head_office_8" />
 
-    <item
-        android:id="@+id/navigation_notifications"
-        android:icon="@drawable/ic_meeting_24dp"
-        android:title="@string/info_office_expansion_4" />
+    <!--<item-->
+        <!--android:id="@+id/navigation_notifications"-->
+        <!--android:icon="@drawable/ic_meeting_24dp"-->
+        <!--android:title="@string/info_office_expansion_4" />-->
 
 </menu>
