--- a/app/src/main/res/values/program_info.xml
+++ b/app/src/main/res/values/program_info.xml
@@ -2,7 +2,7 @@
 <resources>
     <string name="prog_info">
         서비스명:EluoC&#38;C Intranet\n\n
-        버전: Release Version 1.7.1\n\n
+        버전: Release Version 1.7.3\n\n
         기능:\n
         - 메인 화면에서 공지사항 확인5개 리스트 방식 출력\n
         - 메인 화면에서 공지 리스트에 신규 공지는 7일간 New 표시 함\n
@@ -26,18 +26,21 @@
         \n\n
 
         히스토리\n
-
+        버전:  Release Version 1.7.3\n
+        1. 버그 수정\n\n
+        버전:  Release Version 1.7.2\n
+        1. 전화수신시 직원 경우 직원정보 표기 오류 수정
+        \n\n
         버전:  Release Version 1.7.1\n
         1. 직원 조회시 2자 이상 입력 후 조회 변경\n
         2. 직원 조회시 프로그레스 다이얼로그 표기 추가\n
         3. 직원 조회시 검색이 완료시 토스트 메시지로 완료 알림 추가\n
         4. 회의실 예약현황 회의실 탭 위치 변경\n
-        5. 사무실 확장에 따른 회의실 추가\n
-        6. 직원 조회결과 통화 터치시 바로 전화 연결로 변경\n
-        7. 공지 상세 내용에 WEB 링크 터치시 URL 이동 가능 추가됨\n
-        8. 앱 버전 체크 기능 추가 (하위 버전 경우 다운로드 페이지 이동)\n
-        9. MY ELUO메뉴 휴가 리스트 버그 수정\n
-        10. 기타 수정
+        5. 직원 조회결과 통화 터치시 바로 전화 연결로 변경\n
+        6. 공지 상세 내용에 WEB 링크 터치시 URL 이동 가능 추가됨\n
+        7. 앱 버전 체크 기능 추가 (하위 버전 경우 다운로드 페이지 이동)\n
+        8. MY ELUO메뉴 휴가 리스트 버그 수정\n
+        9. 기타 수정
         \n\n
 
         버전:  Release Version 1.7.0\n
