--- a/app/src/main/res/values-ja/program_info.xml
+++ b/app/src/main/res/values-ja/program_info.xml
@@ -2,7 +2,7 @@
 <resources>
     <string name="prog_info">
         サービス名:EluoC&#38;C Intranet\n\n
-        バージョン: Release Version 1.7.0\n\n
+        バージョン: Release Version 1.7.3\n\n
         機能:\n
         - メイン画面でお知らせ確認5つのリスト方式。\n
         - メイン画面での休暇者見せる。\n
@@ -26,6 +26,14 @@
         \n
         \n
         ヒストリー\n
+
+        バージョン:  Release Version 1.7.3\n
+        1. その他のエラーを修正する。
+        \n\n
+
+        バージョン:  Release Version 1.7.2\n
+        1. スタッフが電話を受けるとき、従業員情報の表記エラーの修正
+        \n\n
 
         バージョン:  Release Version 1.7.1\n
         1. スタッフ照会時2文字以上入力した後再生変更\n
