--- a/app/src/main/res/values-ja/program_info.xml
+++ b/app/src/main/res/values-ja/program_info.xml
@@ -2,7 +2,7 @@
 <resources>
     <string name="prog_info">
         サービス名:EluoC&#38;C Intranet\n\n
-        バージョン: Release Version 1.7.7\n\n
+        バージョン: Release Version 1.7.10\n\n
         機能:\n
         - メイン画面でお知らせ確認5つのリスト方式。\n
         - メイン画面での休暇者見せる。\n
@@ -26,6 +26,16 @@
         \n
         \n
         ヒストリー\n
+        バージョン:  Release Version 1.7.10\n
+        1.データ照会関連のバグを修正
+        \n\n
+        バージョン:  Release Version 1.7.9\n
+        1.特殊文字例外を追加
+        \n\n
+        バージョン:  Release Version 1.7.8\n
+        1.スタッフ不在着信通知機能の改善
+        \n\n
+
         バージョン:  Release Version 1.7.7\n
         1. スタッフの電話着信通知機能の改善
         \n\n
