--- a/app/src/main/res/values/program_info.xml
+++ b/app/src/main/res/values/program_info.xml
@@ -2,7 +2,7 @@
 <resources>
     <string name="prog_info">
         서비스명:EluoC&#38;C Intranet\n\n
-        버전: Release Version 1.7.7\n\n
+        버전: Release Version 1.7.10\n\n
         기능:\n
         - 메인 화면에서 공지사항 확인5개 리스트 방식 출력\n
         - 메인 화면에서 공지 리스트에 신규 공지는 7일간 New 표시 함\n
@@ -26,6 +26,16 @@
         \n\n
 
         히스토리\n
+        버전:  Release Version 1.7.10\n
+        1. 데이터 조회 관련 버그 수정
+        \n\n
+        버전:  Release Version 1.7.9\n
+        1. 특수 문자 예외 추가
+        \n\n
+        버전:  Release Version 1.7.8\n
+        1. 직원 부재전화 알림 기능 개선
+        \n\n
+
         버전:  Release Version 1.7.7\n
         1. 직원 전화 수신 알림 기능 개선
         \n\n
